# librustzcash

./: .gitignore  Cargo.toml
libzcashffi/: Cargo.toml  README.md  cbindgen.toml  main.go  shell.sh
libzcashffi/include/: zcashffi.h
libzcashffi/src/: lib.rs  person.rs
